--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/react-xui/xui/issues"
   },
-  "homepage": "https://github.com/react-xui/xui#readme"
+  "homepage": "https://github.com/react-xui/xui#readme",
+  "devDependencies": {
+    "koa": "^2.6.2"
+  }
 }
